--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -10,7 +10,8 @@
 
     <script src="/js/ajax.js"></script>
 
-    <form> Year <input type="text" id="year" width=5 />    </form>
+    <form> Year <input type="text" id="year" width=5 />
+           Team <input type="text" id="team" width=4 />    </form>
 
     <table cellpadding="0" cellspacing="0" border="0" class="display"
       id="example">
