team-record returns first and last name, not playerID

--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -18,17 +18,17 @@
 
       <thead>
         <tr>
-          <th width=5%> Player ID </th>
-          <th width=5%> year </th>
-          <th width=5%> G </th>
-          <th width=5%> AB</th>
-          <th width=5%> R </th>
-          <th width=5%> H  </th>
-          <th width=5%> 2B </th>
-          <th width=5%> 3B </th>
-          <th width=5%> HR </th>
-          <th width=5%> RBI </th>
-          <th width=5%> BB </th>
+          <th width=5%> First </th>
+          <th width=5%> Last </th>
+          <th width=1%> G </th>
+          <th width=1%> AB</th>
+          <th width=1%> R </th>
+          <th width=1%> H  </th>
+          <th width=1%> 2B </th>
+          <th width=1%> 3B </th>
+          <th width=1%> HR </th>
+          <th width=1%> RBI </th>
+          <th width=1%> BB </th>
         </tr>
       </thead>
 
@@ -37,8 +37,8 @@
 
       <tfoot>
         <tr>
-          <th> Player ID </th>
-          <th> year </th>
+          <th> First </th>
+          <th> Last </th>
           <th> G </th>
           <th> AB</th>
           <th> R </th>
