--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -8,6 +8,9 @@
     <script src="/js/jquery.dataTables.js"></script>
     <script src="/js/fnReloadAjax.js"></script>
 
+    <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+
     <script src="/js/ajax.js"></script>
 
     <form> Year <input type="text" id="year" width=5 />
