--- a/protosite/resources/public/html/batter.html
+++ b/protosite/resources/public/html/batter.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title> A jQuery Test </title>
+    <title> Batting </title>
      <link rel="stylesheet" type="text/css" href="/css/jquery.dataTables.css"/>
   </head>
   <body>
@@ -11,10 +11,9 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 
     <script src="/js/underscore-min.js"></script>
-    <script src="/js/ajax.js"></script>
+    <script src="/js/batter.js"></script>
 
-    <form> Year <input type="text" id="year" width=5 />
-           Team <input type="text" id="team" width=4 />    </form>
+    <form> Batter ID <input type="text" id="batter" width=10 /> </form>
 
     <table cellpadding="0" cellspacing="0" border="0" class="display"
       id="example">
