pull out common dataTables function to separate file

--- a/protosite/resources/public/html/batter.html
+++ b/protosite/resources/public/html/batter.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 
     <script src="/js/underscore-min.js"></script>
+    <script src="/js/dataTables.local.js"></script>
     <script src="/js/batter.js"></script>
 
     <form> Batter ID <input type="text" id="batter" width=10 /> </form>
