--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 
     <script src="/js/underscore-min.js"></script>
+    <script src="/js/dataTables.local.js"></script>
     <script src="/js/ajax.js"></script>
 
     <form> Year <input type="text" id="year" width=5 />
