--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -20,5 +20,8 @@
     <table cellpadding="0" cellspacing="0" border="0" class="display"
       id="example">
     </table>
+
+    <div id="result"></div>
+
   </body>
 </html>
