player-history query - datatype: json

--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -21,7 +21,7 @@
       id="example">
     </table>
 
-    <div id="result"></div>
+    <p>    <div id="result"></div>    </p>
 
   </body>
 </html>
