--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -14,14 +14,16 @@
     <script src="/js/dataTables.local.js"></script>
     <script src="/js/ajax.js"></script>
 
-    <form> Year <input type="text" id="year" width=5 />
-           Team <input type="text" id="team" width=4 />    </form>
+    <form> Year <input type="text" id="year" width=5 value="2012" />
+      Team <input type="text" id="team" width=4 value="San Francisco Giants"/>
+    </form>
 
     <table cellpadding="0" cellspacing="0" border="0" class="display"
       id="example">
     </table>
 
-    <p>    <div id="result"></div>    </p>
+    <p>    <div id="playerdata"></div>    </p>
+    <p>    <div id="yeardata"></div>    </p>
 
   </body>
 </html>
