--- a/protosite/resources/public/html/ajaxtest.html
+++ b/protosite/resources/public/html/ajaxtest.html
@@ -8,8 +8,8 @@
     <script type="text/javascript"
             src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.0.1/d3.v3.min.js"></script>
     <script src="/js/jquery-2.0.3.js"></script>
-    <script src="/js/jquery.dataTables.js"></script> 
-    <script src="/js/i3d3.js"></script> 
+    <script src="/js/jquery.dataTables.js"></script>
+    <script src="/js/i3d3.js"></script>
 
     <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
@@ -23,7 +23,7 @@
     </form>
 
     <table cellpadding="0" cellspacing="0" border="0" class="display"
-      id="example">
+      id="datatable">
     </table>
 
     <p>    <div id="playerdata"></div>    </p>
