--- a/protosite/resources/public/html/batter.html
+++ b/protosite/resources/public/html/batter.html
@@ -17,7 +17,7 @@
     <form> Batter ID <input type="text" id="batter" width=10 /> </form>
 
     <table cellpadding="0" cellspacing="0" border="0" class="display"
-      id="example">
+      id="datatable">
     </table>
   </body>
 </html>
