ajax.js import -> teamyear.js

--- a/protosite/resources/public/html/teamyear.html
+++ b/protosite/resources/public/html/teamyear.html
@@ -16,7 +16,7 @@
 
     <script src="/js/underscore-min.js"></script>
     <script src="/js/dataTables.local.js"></script>
-    <script src="/js/ajax.js"></script>
+    <script src="/js/teamyear.js"></script>
 
 
     <div id="wrap">
